src/kash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kash
  namespace: kash
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kash
      port:
        number: 8765
  tls:
    - hosts:
        - kash
